--- a/login.html
+++ b/login.html
@@ -58,7 +58,7 @@
 
     <br>
         <p>
-            <input type="submit" value="Create Acoout" class="btn">
+            <button value="Create Acoout" class="btn" id="btn">Create</button>                        
             
         </p>
     </form>
@@ -70,6 +70,7 @@
     </div>
     <div>
     </div><!--con-->
+    <script src="login.js"></script>
 
 </body>
 
