--- a/chat.html
+++ b/chat.html
@@ -17,12 +17,19 @@
       <h1 class="title"><button id="hbtn">AAC</button></h1>
       <div class="chats">
         <div class="top">
-          <div class="face">얼굴</div>
+          <div class="face">
+            <video id="myFace" autoplay playsinline></video>            
+            <video id="peerFace" autoplay playsinline></video>            
+            <div id="bt">
+              <button id="startBtn">Start</button>
+              <button id="muteBtn">Mute</button>
+              <button id="cameraBtn">Camera On</button>              
+            </div>
+          </div>
           <div class="aac">
             <div class="aacTop">aac탑</div>
             <div class="aacBot">aac바탐</div>
-          </div>
-        </div>
+          </div>        </div>
         <div class="bottom">
           <textarea name="textarea" id="textarea" cols="30" rows="10"></textarea>          
         </div>
