--- a/chat.html
+++ b/chat.html
@@ -19,7 +19,7 @@
         <div class="top">
           <div class="face">
             <video id="myFace" autoplay playsinline></video>            
-            <video id="peerFace" autoplay playsinline></video>            
+            <!-- <video id="peerFace" autoplay playsinline></video>             -->
             <div id="bt">
               <button id="startBtn">Start</button>
               <button id="muteBtn">Mute</button>
