--- a/chat.html
+++ b/chat.html
@@ -27,13 +27,27 @@
             </div>
           </div>
           <div class="aac">
-            <div class="aacTop">aac탑</div>
-            <div class="aacBot">aac바탐</div>
-          </div>        </div>
+            <div class="aacTop">
+              <button type="button" id="subjectBtn">
+                <img src="img/btn/subject.jpg"/>
+                <span>주어</span>
+              </button>
+              <button type="button" id="aacBtn">
+                <img src="img/btn/aac.png"/>
+                <span>AAC</span>
+              </button>
+              <button type="button" id="verbBtn">
+                <img src="img/btn/verb.jpg"/>
+                <span>동사</span>
+              </button>
+            </div>
+            <div class="aacBot" id="aacBot"></div>
+          </div>        
+        </div>
         <div class="bottom">
           <textarea name="textarea" id="textarea" cols="30" rows="10"></textarea>          
         </div>
-      </div>
+      </div> 
     </div>
     <div class="spendChat">
       <input id="input1" type="text" placeholder="입력해주세요!" />
