--- a/chat.html
+++ b/chat.html
@@ -18,13 +18,14 @@
       <div class="chats">
         <div class="top">
           <div class="face">
-            <video id="myFace" autoplay playsinline></video>            
-            <!-- <video id="peerFace" autoplay playsinline></video>             -->
-            <div id="bt">
+            <img id="aimage" src="img/aimage.png" alt="aiamge">
+            <!-- <video id="myFace" autoplay playsinline></video> -->
+            <!-- <video id="peerFace" autoplay playsinline></video>-->
+            <!-- <div id="bt">
               <button id="startBtn">Start</button>
               <button id="muteBtn">Mute</button>
               <button id="cameraBtn">Camera On</button>              
-            </div>
+            </div> -->
           </div>
           <div class="aac">
             <div class="aacTop">
